[gd_scene load_steps=4 format=3 uid="uid://dacry1jp4w76r"]

[ext_resource type="Script" path="res://scenes/projectiles/laser.gd" id="1_4m3jp"]
[ext_resource type="Texture2D" uid="uid://blsl62j2sfebf" path="res://graphics/projectiles/blue.png" id="1_sc5pt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1ll2s"]
radius = 4.0
height = 142.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_4m3jp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1ll2s")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 10)
texture = ExtResource("1_sc5pt")

[node name="SelftDistructTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelftDistructTimer" to="." method="_on_selft_distruct_timer_timeout"]
